--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@ data/
 
 surprise/
 
+content_based_model.ipynb
+CB_test.ipynb
+CB_test cosine.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
