--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ CB_test.ipynb
 CB_test cosine.ipynb
 ridge_user_profiles.pkl
 CB_test cosine_final.ipynb
+final_test.ipynb
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
